// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account fees utility functions formatMethodFeesTooltip() displays base fee, when only promo discount without percentage or fixed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="wcpay-fees-tooltip"
      >
        <div>
          <div>
            Base fee
          </div>
          <div>
            12.3% + $4.57
          </div>
        </div>
        <div>
          <div>
            International payment method fee
          </div>
          <div>
            1%
          </div>
        </div>
        <div>
          <div>
            Foreign exchange fee
          </div>
          <div>
            1%
          </div>
        </div>
        <div>
          <div>
            Total per transaction
          </div>
          <div
            class="wcpay-fees-tooltip__bold"
          >
            14.3% + $4.57
          </div>
        </div>
        <div
          class="wcpay-fees-tooltip__hint-text"
        >
          <span>
            <a
              href="https://woocommerce.com/document/payments/faq/fees/#united-states"
              rel="noreferrer"
              target="_blank"
            >
              Learn more
            </a>
             about WooCommerce Payments Fees in your country
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="wcpay-fees-tooltip"
    >
      <div>
        <div>
          Base fee
        </div>
        <div>
          12.3% + $4.57
        </div>
      </div>
      <div>
        <div>
          International payment method fee
        </div>
        <div>
          1%
        </div>
      </div>
      <div>
        <div>
          Foreign exchange fee
        </div>
        <div>
          1%
        </div>
      </div>
      <div>
        <div>
          Total per transaction
        </div>
        <div
          class="wcpay-fees-tooltip__bold"
        >
          14.3% + $4.57
        </div>
      </div>
      <div
        class="wcpay-fees-tooltip__hint-text"
      >
        <span>
          <a
            href="https://woocommerce.com/document/payments/faq/fees/#united-states"
            rel="noreferrer"
            target="_blank"
          >
            Learn more
          </a>
           about WooCommerce Payments Fees in your country
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Account fees utility functions formatMethodFeesTooltip() displays base percentage and fixed fee - no custom fee nor discount 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="wcpay-fees-tooltip"
      >
        <div>
          <div>
            Base fee
          </div>
          <div>
            12.3% + $4.57
          </div>
        </div>
        <div>
          <div>
            International payment method fee
          </div>
          <div>
            1%
          </div>
        </div>
        <div>
          <div>
            Foreign exchange fee
          </div>
          <div>
            1%
          </div>
        </div>
        <div>
          <div>
            Total per transaction
          </div>
          <div
            class="wcpay-fees-tooltip__bold"
          >
            14.3% + $4.57
          </div>
        </div>
        <div
          class="wcpay-fees-tooltip__hint-text"
        >
          <span>
            <a
              href="https://woocommerce.com/document/payments/faq/fees/#united-states"
              rel="noreferrer"
              target="_blank"
            >
              Learn more
            </a>
             about WooCommerce Payments Fees in your country
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="wcpay-fees-tooltip"
    >
      <div>
        <div>
          Base fee
        </div>
        <div>
          12.3% + $4.57
        </div>
      </div>
      <div>
        <div>
          International payment method fee
        </div>
        <div>
          1%
        </div>
      </div>
      <div>
        <div>
          Foreign exchange fee
        </div>
        <div>
          1%
        </div>
      </div>
      <div>
        <div>
          Total per transaction
        </div>
        <div
          class="wcpay-fees-tooltip__bold"
        >
          14.3% + $4.57
        </div>
      </div>
      <div
        class="wcpay-fees-tooltip__hint-text"
      >
        <span>
          <a
            href="https://woocommerce.com/document/payments/faq/fees/#united-states"
            rel="noreferrer"
            target="_blank"
          >
            Learn more
          </a>
           about WooCommerce Payments Fees in your country
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Account fees utility functions formatMethodFeesTooltip() displays custom fee details, when applicable 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="wcpay-fees-tooltip"
      >
        <div>
          <div>
            Base fee
          </div>
          <div>
            10.1% + $4.01
          </div>
        </div>
        <div>
          <div>
            International payment method fee
          </div>
          <div>
            1%
          </div>
        </div>
        <div>
          <div>
            Foreign exchange fee
          </div>
          <div>
            1%
          </div>
        </div>
        <div>
          <div>
            Total per transaction
          </div>
          <div
            class="wcpay-fees-tooltip__bold"
          >
            12.1% + $4.01
          </div>
        </div>
        <div
          class="wcpay-fees-tooltip__hint-text"
        >
          <span>
            <a
              href="https://woocommerce.com/document/payments/faq/fees/#united-states"
              rel="noreferrer"
              target="_blank"
            >
              Learn more
            </a>
             about WooCommerce Payments Fees in your country
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="wcpay-fees-tooltip"
    >
      <div>
        <div>
          Base fee
        </div>
        <div>
          10.1% + $4.01
        </div>
      </div>
      <div>
        <div>
          International payment method fee
        </div>
        <div>
          1%
        </div>
      </div>
      <div>
        <div>
          Foreign exchange fee
        </div>
        <div>
          1%
        </div>
      </div>
      <div>
        <div>
          Total per transaction
        </div>
        <div
          class="wcpay-fees-tooltip__bold"
        >
          12.1% + $4.01
        </div>
      </div>
      <div
        class="wcpay-fees-tooltip__hint-text"
      >
        <span>
          <a
            href="https://woocommerce.com/document/payments/faq/fees/#united-states"
            rel="noreferrer"
            target="_blank"
          >
            Learn more
          </a>
           about WooCommerce Payments Fees in your country
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
